--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+html {
+  overflow-x: hidden;
+  font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  background-color: #282c34;
+  padding: 0.5rem;
+}
+
+.navLeft {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.navRight {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  background-color: red;
+}
+
+.navItem {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-decoration: none;
+  height: 100%;
 }
