--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -123,7 +123,40 @@ html {
   background-color: red;
   width: 100%;
   height: 70rem;
+  display: flex;
 }
+
+.introMegaTextCointainer{
+  width: 100%;
+  height: 10rem;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.introMegaText{
+  background-color: #ee786e;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.whereRU{
+
+}
+
+.introFunFact{
+
+}
+
+.chatBotExample{
+
+}
+
+
 
 /* instructions ------------------------------------------------ */
 
