--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -14,6 +14,7 @@ html {
   height: 3.5rem;
   width: 100%;
   top: 0;
+  z-index: 100;
 }
 
 .navLeft {
@@ -122,14 +123,14 @@ html {
   margin-top: 3.5rem;
   background-color: red;
   width: 100%;
-  height: 70rem;
+  height: 100rem;
   display: flex;
   flex-direction: column;
 }
 
 .introMegaTextCointainer{
   width: 100%;
-  height: 40%;
+  height: 35%;
   background-color: blue;
   display: flex;
   justify-content: center;
@@ -203,6 +204,17 @@ html {
 }
 
 
-/* instructions ------------------------------------------------ */
+/* overview ------------------------------------------------ */
 
+.overview{
+  background-color: black;
+  width: 100%;
+  height: 100rem;
+}
+
+.overviewContent{
+  display: flex;
+  flex-direction: row;
+  background-color: blue;
+}
 
