--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -138,18 +138,25 @@ html {
 }
 
 .introMegaText{
-  background-color: #ee786e;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  font-size: 6rem;
 }
 
 .MT1{
+  height: 8rem;
   background-color: red;
+  display: flex;
+  align-items: center;
 }
 
 .MT2{
+  height: 8rem;
+  background-color: yellow;
+    display: flex;
+  align-items: center;
 }
 
 .whereRU{
