--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -210,7 +210,17 @@ html {
   height: 80%;
 }
 
+.bob{
+  background-color: yellow;
+  width: 100%;
+  height: 2rem;
+}
 
+.bobby{
+  background-color: yellowgreen;
+    width: 100%;
+  height: 2rem;
+}
 /* overview ------------------------------------------------ */
 
 .overview{
