--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -23,9 +23,10 @@ html {
   align-items: center;
   justify-content: center;
   height: 100%;
-  background-image: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
+  background-image: linear-gradient(to bottom right, #3b3b3b 0%, #000000 100%);
   transform: skew(-20deg) translateX(-1rem);
   width: 15rem;
+  user-select: none;
 }
 
 .logo {
@@ -44,6 +45,7 @@ html {
   align-items: center;
   flex-direction: row;
   height: 100%;
+  font-family: "Orbitron", "Russo One", Arial, Helvetica, sans-serif;
 }
 
 .navItem {
@@ -121,7 +123,6 @@ html {
 /*banner --------------------- */
 
 .banner {
-  margin-top: 3.5rem;
   background-color: red;
   width: 100%;
   height: 100rem;
@@ -144,29 +145,28 @@ html {
   flex-direction: column;
   align-items: center;
   font-size: 6rem;
+  font-family: "Russo One", "Orbitron", Arial, Helvetica, sans-serif;
 }
 
 .MT1 {
   height: 8rem;
-  background-color: red;
   display: flex;
   align-items: center;
 }
 
 .MT2 {
   height: 8rem;
-  background-color: yellow;
   display: flex;
   align-items: center;
 }
 
 .whereRU {
-  background-color: aqua;
   display: flex;
   flex-direction: column;
   position: absolute;
   left: 3%;
   top: 20%;
+  user-select: none;
 }
 
 .whereRUBox {
