--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -125,7 +125,7 @@ html {
 .banner {
   background-color: red;
   width: 100%;
-  height: 100rem;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -243,9 +243,12 @@ html {
 /* overview ------------------------------------------------ */
 
 .overview {
-  background-color: rgb(127, 127, 127);
+  background-color: rgb(0, 0, 0);
   width: 100%;
-  height: 100rem;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .overviewContent {
@@ -253,6 +256,10 @@ html {
   flex-direction: row;
   background-color: blue;
   justify-content: space-between;
+  align-items: center;
+  width: 99%;
+  height: 98.5%;
+  border-radius: 1rem;
 }
 
 .overviewTextBox {
@@ -263,11 +270,14 @@ html {
   flex-direction: column;
   width: 40rem;
   height: 40rem;
+  margin-left: 5%;
 }
 
 .overviewRight {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  margin-right: 5%;
 }
 
 .overviewPicture {
@@ -280,4 +290,10 @@ html {
   background-color: darkgoldenrod;
   width: 30rem;
   height: 30rem;
+}
+
+.blackSpace {
+  width: 100%;
+  height: 80vh;
+  background-color: black;
 }
