--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -1,12 +1,14 @@
 html {
   overflow-x: hidden;
   font-size: 16px;
-  font-family: "Orbitron", "Russo One", Arial, Helvetica, sans-serif;
 }
 
 .app {
 }
 
+body {
+  font-family: "Orbitron", "Russo One", Arial, Helvetica, sans-serif;
+}
 /* Navbar ------------------------------------------------ */
 .navbar {
   position: fixed;
@@ -296,4 +298,43 @@ html {
   width: 100%;
   height: 80vh;
   background-color: black;
+}
+
+.blackSpace2 {
+  width: 100%;
+  height: 10vh;
+  background-color: black;
+}
+
+.footer {
+  background-color: #fcee0a;
+  margin-top: 0;
+  overflow: hidden;
+  font-size: 1.25rem;
+}
+
+.footer img {
+  width: 160rem;
+  user-select: none;
+}
+
+.footerContent {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-bottom: 2rem;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
