--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -84,6 +84,15 @@ body {
   color: transparent;
 }
 
+.guideMenu {
+  background-color: white;
+  width: 10vw;
+  height: 30vh;
+  position: absolute;
+  top: 3.5rem;
+  right: 9.3vw;
+}
+
 .hamburgerMenu {
   display: none;
 }
