--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   top: 0;
   z-index: 100;
+  user-select: none;
 }
 
 .navLeft {
@@ -28,7 +29,6 @@ body {
   background-image: linear-gradient(to bottom right, #3b3b3b 0%, #000000 100%);
   transform: skew(-20deg) translateX(-1rem);
   width: 15rem;
-  user-select: none;
 }
 
 .logo {
@@ -85,12 +85,37 @@ body {
 }
 
 .guideMenu {
-  background-color: white;
-  width: 10vw;
+  clip-path: polygon(0 0, 0 100%, 80% 100%, 100% 85%, 100% 0);
+  width: 12vw;
   height: 30vh;
   position: absolute;
   top: 3.5rem;
   right: 9.3vw;
+  overflow: visible;
+}
+
+.guideMenuContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  overflow: visible;
+}
+
+.guideMenuBox {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 20%;
+  border: 1px rgba(0, 0, 0, 20%) solid;
+  background-color: rgb(145, 145, 145);
+  padding-left: 5%;
+}
+
+.guideMenuBox a {
+  text-decoration: none;
+  color: black;
 }
 
 .hamburgerMenu {
