--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -85,13 +85,11 @@ body {
 }
 
 .guideMenu {
-  clip-path: polygon(0 0, 0 100%, 80% 100%, 100% 85%, 100% 0);
-  width: 12vw;
-  height: 30vh;
   position: absolute;
   top: 3.5rem;
   right: 9.3vw;
   overflow: visible;
+  width: 20rem;
 }
 
 .guideMenuContent {
@@ -100,6 +98,8 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 100%;
+  width: 12vw;
+  height: 30vh;
   overflow: visible;
 }
 
