--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -250,6 +250,15 @@ body {
   background-color: green;
 }
 
+.technoStyle {
+  width: 27.5vw;
+  height: 45vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  clip-path: polygon(10% 0, 12% 0, 25% 45%, 100% 96%, 100% 99%, 23% 47%);
+}
+
 .chatBotExample {
   width: 100%;
   height: 60%;
