--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -21,6 +21,24 @@ body {
   user-select: none;
 }
 
+.navBarBG {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 3.5rem;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 50%),
+    rgba(0, 0, 0, 40%),
+    rgba(0, 0, 0, 30%),
+    rgba(0, 0, 0, 20%),
+    rgba(0, 0, 0, 10%),
+    rgba(0, 0, 0, 5%),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
+  );
+}
+
 .navLeft {
   display: flex;
   align-items: center;
@@ -63,7 +81,7 @@ body {
 }
 
 .navItem:hover {
-  background-image: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
+  background-image: linear-gradient(to bottom right, #3b3b3b 0%, #000000 100%);
   transition: background-image 1 s ease-in-out;
 }
 
@@ -77,7 +95,7 @@ body {
 
 .navItem p {
   transform: skew(20deg);
-  background: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
+  background-image: linear-gradient(to bottom right, #ffffff 0%, #ffc3be 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -207,7 +225,7 @@ body {
 .whereRU {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   left: 3%;
   top: 20%;
   user-select: none;
