--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -178,17 +178,19 @@ body {
 
 .banner {
   width: 100%;
-  height: 140vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
 .introMegaTextCointainer {
   width: 100%;
-  height: 35%;
+  height: 60%;
+  margin-top: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #fcee0a;
 }
 
 .introMegaText {
@@ -196,12 +198,12 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  font-size: 9vh;
+  font-size: 15vh;
   font-family: "Russo One", "Orbitron", Arial, Helvetica, sans-serif;
 }
 
 .MT1 {
-  height: 8vh;
+  height: 15vh;
   display: flex;
   align-items: center;
   background: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
@@ -212,7 +214,7 @@ body {
 }
 
 .MT2 {
-  height: 12vh;
+  height: 15vh;
   display: flex;
   align-items: center;
   background: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
@@ -241,7 +243,7 @@ body {
 }
 
 .whereRUBox p {
-  background: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
+  background: linear-gradient(to bottom right, #ffffff 0%, #ffffff 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -255,7 +257,7 @@ body {
   width: 1rem;
   height: 1rem;
   border-radius: 1rem;
-  background-color: gray;
+  background-color: rgb(255, 255, 255);
 }
 
 .introFunFact {
