--- a/instructionwebsite/src/App.css
+++ b/instructionwebsite/src/App.css
@@ -14,7 +14,7 @@ body {
   position: fixed;
   display: flex;
   justify-content: space-between;
-  height: 3.5rem;
+  height: 6vh;
   width: 100%;
   top: 0;
   z-index: 100;
@@ -25,7 +25,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 3.5rem;
+  height: 6vh;
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 50%),
@@ -46,7 +46,7 @@ body {
   height: 100%;
   background-image: linear-gradient(to bottom right, #3b3b3b 0%, #000000 100%);
   transform: skew(-20deg) translateX(-1rem);
-  width: 15rem;
+  width: 15vw;
 }
 
 .logo {
@@ -57,7 +57,7 @@ body {
   background-clip: text;
   color: transparent;
   font-family: "Rock Salt";
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .navRight {
@@ -188,11 +188,13 @@ body {
   width: 100%;
   height: 60%;
   margin-top: 20vh;
+  padding-right: 10vw;
+  margin-left: 0;
+  margin-left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  background-color: #fcee0a;
   font-family: "Russo One", "Orbitron", Arial, Helvetica, sans-serif;
   font-size: calc(5.5vw + 5.5vh);
 }
@@ -200,21 +202,17 @@ body {
 .MT1 {
   display: flex;
   align-items: center;
-  background: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
 }
 
 .MT2 {
   display: flex;
   align-items: center;
-  background: linear-gradient(to bottom right, #fceeb5 0%, #ee786e 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
+}
+
+.bannerImg img {
+  position: absolute;
+  width: 20rem;
+  height: auto;
 }
 
 .whereRU {
@@ -222,7 +220,7 @@ body {
   flex-direction: column;
   position: fixed;
   left: 3%;
-  top: 20%;
+  top: 45%;
   user-select: none;
 }
 
@@ -255,9 +253,9 @@ body {
 
 .introFunFact {
   position: absolute;
-  width: 17.5%;
-  height: 40%;
-  right: 1.5%;
+  width: 10vw;
+  height: 60vh;
+  right: 0;
   top: 20%;
   display: flex;
   align-items: center;
@@ -267,21 +265,21 @@ body {
 }
 
 .introFunFactImg {
-  width: 75%;
-  height: 70%;
-  background-color: rgb(255, 255, 54);
+  width: 8vw;
+  height: 15vh;
+  background-color: rgb(0, 0, 0);
   clip-path: polygon(0 25%, 25% 0, 100% 0, 100% 75%, 75% 100%, 0 100%);
   z-index: 12;
 }
 
 .introFunFactText {
-  width: 90%;
-  height: 30%;
+  width: 10vw;
+  height: 10vh;
 }
 
 .technoStyle {
   aspect-ratio: 11 / 9;
-  background-color: rgb(229, 255, 0);
+  background-color: #fff700;
   width: 27.5vw;
   height: 45vh;
   position: absolute;
@@ -292,7 +290,7 @@ body {
 }
 
 .technoStyle2 {
-  background-color: blue;
+  background-color: #fff700;
   width: 27.5vw;
   height: 45vh;
   position: absolute;
